--- a/searchservice-dev.properties
+++ b/searchservice-dev.properties
@@ -14,6 +14,7 @@ spring.cloud.stream.bindings.customerCreated-in-0.destination=customer-created-e
 spring.cloud.stream.bindings.addressCreated-in-0.destination=address-created-event
 spring.cloud.stream.bindings.customerCreated-in-0.group=search-service
 spring.cloud.stream.bindings.addressCreated-in-0.group=address-search-service
+spring.cloud.function.definition=customerCreated;addressCreated
 
 # spring.kafka.bootstrap-servers=localhost:29092
 # spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
