--- a/searchservice-dev.properties
+++ b/searchservice-dev.properties
@@ -11,13 +11,14 @@ eureka.instance.instance-id= ${spring.application.name}:${instanceId:${random.va
 #kafka configurations
 spring.cloud.stream.kafka.binder.brokers=localhost:29092
 spring.cloud.stream.bindings.customerCreated-in-0.destination=customer-created-event
-spring.cloud.stream.bindings.addressCreated-in-0.destination=address-created-event
 spring.cloud.stream.bindings.customerCreated-in-0.group=search-service
-spring.cloud.stream.bindings.addressCreated-in-0.group=address-search-service
-spring.cloud.function.definition=customerCreated;addressCreated
+#spring.cloud.stream.bindings.addressCreated-in-0.destination=address-created-event
+#spring.cloud.stream.bindings.addressCreated-in-0.group=address-search-service
+#spring.cloud.function.definition=customerCreated;addressCreated
 
 # spring.kafka.bootstrap-servers=localhost:29092
 # spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 # spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
 # spring.kafka.consumer.properties.spring.json.trusted.packages=*
 # spring.kafka.consumer.auto-offset-reset=earliest
+
