--- a/customerservice-dev.properties
+++ b/customerservice-dev.properties
@@ -23,9 +23,12 @@ spring.jpa.properties.hibernate.format_sql=true
 
 #kafka configuration
 spring.cloud.stream.kafka.binder.brokers=localhost:29092
+#Customer
 spring.cloud.stream.bindings.customerCreated-out-0.destination=customer-created-event
+#Address
 spring.cloud.stream.bindings.addressCreated-out-0.destination=address-created-event
 spring.cloud.stream.bindings.addressDeleted-out-0.destination=address-deleted-event
+spring.cloud.stream.bindings.addressUpdated-out-0.destination=address-update-event
 #spring.kafka.bootstrap-servers=localhost:29092
 # spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 # spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
