--- a/searchservice-dev.properties
+++ b/searchservice-dev.properties
@@ -10,13 +10,20 @@ eureka.instance.instance-id= ${spring.application.name}:${instanceId:${random.va
 
 #kafka configurations
 spring.cloud.stream.kafka.binder.brokers=localhost:29092
+spring.cloud.function.definition=customerCreated;addressCreated;addressDeleted:
+#Costumer
 spring.cloud.stream.bindings.customerCreated-in-0.destination=customer-created-event
 spring.cloud.stream.bindings.customerCreated-in-0.group=search-service
+#AddressAdd
 spring.cloud.stream.bindings.addressCreated-in-0.destination=address-created-event
 spring.cloud.stream.bindings.addressCreated-in-0.group=address-search-service
+#AddressDelete
 spring.cloud.stream.bindings.addressDeleted-in-0.destination=address-deleted-event
 spring.cloud.stream.bindings.addressDeleted-in-0.group=address-deleted-service
-spring.cloud.function.definition=customerCreated;addressCreated;addressDeleted
+#AddressUpdate
+spring.cloud.stream.bindings.addressUpdated-in-0.destination=address-update-event
+spring.cloud.stream.bindings.addressUpdated-in-0.group=address-update-service
+
 
 # spring.kafka.bootstrap-servers=localhost:29092
 # spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
