--- a/searchservice-dev.properties
+++ b/searchservice-dev.properties
@@ -10,7 +10,7 @@ eureka.instance.instance-id= ${spring.application.name}:${instanceId:${random.va
 
 #kafka configurations
 spring.cloud.stream.kafka.binder.brokers=localhost:29092
-spring.cloud.function.definition=customerCreated;addressCreated;addressDeleted:
+spring.cloud.function.definition=customerCreated;addressCreated;addressDeleted;addressUpdated
 #Costumer
 spring.cloud.stream.bindings.customerCreated-in-0.destination=customer-created-event
 spring.cloud.stream.bindings.customerCreated-in-0.group=search-service
