--- a/customerservice-dev.properties
+++ b/customerservice-dev.properties
@@ -29,6 +29,10 @@ spring.cloud.stream.bindings.customerCreated-out-0.destination=customer-created-
 spring.cloud.stream.bindings.addressCreated-out-0.destination=address-created-event
 spring.cloud.stream.bindings.addressDeleted-out-0.destination=address-deleted-event
 spring.cloud.stream.bindings.addressUpdated-out-0.destination=address-update-event
+#ContactMedium
+spring.cloud.stream.bindings.contactMedium-out-0.destination=contactMedium-created-event
+
+
 #spring.kafka.bootstrap-servers=localhost:29092
 # spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 # spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
