--- a/searchservice-dev.properties
+++ b/searchservice-dev.properties
@@ -11,7 +11,7 @@ eureka.instance.instance-id= ${spring.application.name}:${instanceId:${random.va
 #kafka configurations
 spring.cloud.stream.kafka.binder.brokers=localhost:29092
 spring.cloud.function.definition=customerCreated;addressCreated;addressDeleted;addressUpdated
-#Costumer
+#CostumerAdd
 spring.cloud.stream.bindings.customerCreated-in-0.destination=customer-created-event
 spring.cloud.stream.bindings.customerCreated-in-0.group=search-service
 #AddressAdd
@@ -23,6 +23,9 @@ spring.cloud.stream.bindings.addressDeleted-in-0.group=address-deleted-service
 #AddressUpdate
 spring.cloud.stream.bindings.addressUpdated-in-0.destination=address-update-event
 spring.cloud.stream.bindings.addressUpdated-in-0.group=address-update-service
+#ContactMediumAdd
+spring.cloud.stream.bindings.contactMedium-in-0.destination=contactMedium-created-event
+spring.cloud.stream.bindings.contactMedium-in-0.group=contactMedium-search-service
 
 
 # spring.kafka.bootstrap-servers=localhost:29092
