--- a/searchservice-dev.properties
+++ b/searchservice-dev.properties
@@ -24,8 +24,8 @@ spring.cloud.stream.bindings.addressDeleted-in-0.group=address-deleted-service
 spring.cloud.stream.bindings.addressUpdated-in-0.destination=address-update-event
 spring.cloud.stream.bindings.addressUpdated-in-0.group=address-update-service
 #ContactMediumAdd
-spring.cloud.stream.bindings.contactMedium-in-0.destination=contactMedium-created-event
-spring.cloud.stream.bindings.contactMedium-in-0.group=contactMedium-search-service
+spring.cloud.stream.bindings.contactMediumCreated-in-0.destination=contactMedium-created-event
+spring.cloud.stream.bindings.contactMediumCreated-in-0.group=contactMedium-search-service
 
 
 # spring.kafka.bootstrap-servers=localhost:29092
