--- a/customerservice-dev.properties
+++ b/customerservice-dev.properties
@@ -30,7 +30,7 @@ spring.cloud.stream.bindings.addressCreated-out-0.destination=address-created-ev
 spring.cloud.stream.bindings.addressDeleted-out-0.destination=address-deleted-event
 spring.cloud.stream.bindings.addressUpdated-out-0.destination=address-update-event
 #ContactMedium
-spring.cloud.stream.bindings.contactMedium-out-0.destination=contactMedium-created-event
+spring.cloud.stream.bindings.contactMediumCreated-out-0.destination=contactMedium-created-event
 
 
 #spring.kafka.bootstrap-servers=localhost:29092
