--- a/searchservice-dev.properties
+++ b/searchservice-dev.properties
@@ -10,7 +10,8 @@ eureka.instance.instance-id= ${spring.application.name}:${instanceId:${random.va
 
 #kafka configurations
 spring.cloud.stream.kafka.binder.brokers=localhost:29092
-spring.cloud.function.definition=customerCreated;addressCreated;addressDeleted;addressUpdated
+#DefinitionPathForBeanDistinction
+spring.cloud.function.definition=customerCreated;addressCreated;addressDeleted;addressUpdated;contactMediumCreated
 #CostumerAdd
 spring.cloud.stream.bindings.customerCreated-in-0.destination=customer-created-event
 spring.cloud.stream.bindings.customerCreated-in-0.group=search-service
