--- a/customerservice-dev.properties
+++ b/customerservice-dev.properties
@@ -31,6 +31,7 @@ spring.cloud.stream.bindings.addressDeleted-out-0.destination=address-deleted-ev
 spring.cloud.stream.bindings.addressUpdated-out-0.destination=address-update-event
 #ContactMedium
 spring.cloud.stream.bindings.contactMediumCreated-out-0.destination=contactMedium-created-event
+spring.cloud.stream.bindings.contactMediumUpdated-out-0.destination=contactMedium-update-event
 
 
 #spring.kafka.bootstrap-servers=localhost:29092
