--- a/searchservice-dev.properties
+++ b/searchservice-dev.properties
@@ -11,7 +11,7 @@ eureka.instance.instance-id= ${spring.application.name}:${instanceId:${random.va
 #kafka configurations
 spring.cloud.stream.kafka.binder.brokers=localhost:29092
 #DefinitionPathForBeanDistinction
-spring.cloud.function.definition=customerCreated;addressCreated;addressDeleted;addressUpdated;contactMediumCreated
+spring.cloud.function.definition=customerCreated;addressCreated;addressDeleted;addressUpdated;contactMediumCreated;contactMediumUpdated
 #CostumerAdd
 spring.cloud.stream.bindings.customerCreated-in-0.destination=customer-created-event
 spring.cloud.stream.bindings.customerCreated-in-0.group=search-service
@@ -27,7 +27,9 @@ spring.cloud.stream.bindings.addressUpdated-in-0.group=address-update-service
 #ContactMediumAdd
 spring.cloud.stream.bindings.contactMediumCreated-in-0.destination=contactMedium-created-event
 spring.cloud.stream.bindings.contactMediumCreated-in-0.group=contactMedium-search-service
-
+#ContactMediumUpdate
+spring.cloud.stream.bindings.contactMediumUpdated-in-0.destination=contactMedium-update-event
+spring.cloud.stream.bindings.contactMediumUpdated-in-0.destination=contactMedium-update-service
 
 # spring.kafka.bootstrap-servers=localhost:29092
 # spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
