--- a/customerservice-dev.properties
+++ b/customerservice-dev.properties
@@ -32,7 +32,7 @@ spring.cloud.stream.bindings.addressUpdated-out-0.destination=address-update-eve
 #ContactMedium
 spring.cloud.stream.bindings.contactMediumCreated-out-0.destination=contactMedium-created-event
 spring.cloud.stream.bindings.contactMediumUpdated-out-0.destination=contactMedium-update-event
-
+spring.cloud.stream.bindings.contactMediumDeleted-out-0.destination=contactMedium-deleted-event
 
 #spring.kafka.bootstrap-servers=localhost:29092
 # spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
