--- a/searchservice-dev.properties
+++ b/searchservice-dev.properties
@@ -11,7 +11,7 @@ eureka.instance.instance-id= ${spring.application.name}:${instanceId:${random.va
 #kafka configurations
 spring.cloud.stream.kafka.binder.brokers=localhost:29092
 #DefinitionPathForBeanDistinction
-spring.cloud.function.definition=customerCreated;addressCreated;addressDeleted;addressUpdated;contactMediumCreated;contactMediumUpdated
+spring.cloud.function.definition=customerCreated;addressCreated;addressDeleted;addressUpdated;contactMediumCreated;contactMediumUpdated;contactMediumDeleted
 #CostumerAdd
 spring.cloud.stream.bindings.customerCreated-in-0.destination=customer-created-event
 spring.cloud.stream.bindings.customerCreated-in-0.group=search-service
@@ -30,6 +30,9 @@ spring.cloud.stream.bindings.contactMediumCreated-in-0.group=contactMedium-searc
 #ContactMediumUpdate
 spring.cloud.stream.bindings.contactMediumUpdated-in-0.destination=contactMedium-update-event
 spring.cloud.stream.bindings.contactMediumUpdated-in-0.group=contactMedium-update-service
+#ContactMediumDelete
+spring.cloud.stream.bindings.contactMediumDeleted-in-0.destination=contactMedium-deleted-event
+spring.cloud.stream.bindings.contactMediumDeleted-in-0.group=contactMedium-deleted-service
 
 # spring.kafka.bootstrap-servers=localhost:29092
 # spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
