--- a/customerservice-dev.properties
+++ b/customerservice-dev.properties
@@ -10,7 +10,7 @@ eureka.instance.prefer-ip-address= true
 eureka.instance.instance-id= ${spring.application.name}:${instanceId:${random.value}}
 
 #Postgre Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5450/projectdb
+spring.datasource.url=jdbc:postgresql://localhost:5450/customerdb
 spring.datasource.username=admin
 spring.datasource.password=123456
 spring.datasource.driver-class-name=org.postgresql.Driver
