--- a/customerservice-dev.properties
+++ b/customerservice-dev.properties
@@ -24,7 +24,7 @@ spring.jpa.properties.hibernate.format_sql=true
 #kafka configuration
 spring.cloud.stream.kafka.binder.brokers=localhost:29092
 #Customer
-#spring.cloud.stream.bindings.customerCreated-out-0.destination=customer-created-event
+spring.cloud.stream.bindings.customerCreated-out-0.destination=customer-created-event
 #Address
 #spring.cloud.stream.bindings.addressCreated-out-0.destination=address-created-event
 #spring.cloud.stream.bindings.addressDeleted-out-0.destination=address-deleted-event
@@ -34,6 +34,6 @@ spring.cloud.stream.kafka.binder.brokers=localhost:29092
 #spring.cloud.stream.bindings.contactMediumUpdated-out-0.destination=contactMedium-update-event
 #spring.cloud.stream.bindings.contactMediumDeleted-out-0.destination=contactMedium-deleted-event
 
-#spring.kafka.bootstrap-servers=localhost:29092
-# spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-# spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.bootstrap-servers=localhost:29092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
