--- a/searchservice-dev.properties
+++ b/searchservice-dev.properties
@@ -11,10 +11,10 @@ eureka.instance.instance-id= ${spring.application.name}:${instanceId:${random.va
 #kafka configurations
 spring.cloud.stream.kafka.binder.brokers=localhost:29092
 #DefinitionPathForBeanDistinction
-#spring.cloud.function.definition=customerCreated;addressCreated;addressDeleted;addressUpdated;contactMediumCreated;contactMediumUpdated;contactMediumDeleted
+spring.cloud.function.definition=customerCreated;addressCreated;addressDeleted;addressUpdated;contactMediumCreated;contactMediumUpdated;contactMediumDeleted
 #CostumerAdd
-#spring.cloud.stream.bindings.customerCreated-in-0.destination=customer-created-event
-#spring.cloud.stream.bindings.customerCreated-in-0.group=search-service
+spring.cloud.stream.bindings.customerCreated-in-0.destination=customer-created-event
+spring.cloud.stream.bindings.customerCreated-in-0.group=search-service
 #AddressAdd
 #spring.cloud.stream.bindings.addressCreated-in-0.destination=address-created-event
 #spring.cloud.stream.bindings.addressCreated-in-0.group=address-search-service
@@ -34,10 +34,11 @@ spring.cloud.stream.kafka.binder.brokers=localhost:29092
 #spring.cloud.stream.bindings.contactMediumDeleted-in-0.destination=contactMedium-deleted-event
 #spring.cloud.stream.bindings.contactMediumDeleted-in-0.group=contactMedium-deleted-service
 
-# spring.kafka.bootstrap-servers=localhost:29092
-# spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-# spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
-# spring.kafka.consumer.properties.spring.json.trusted.packages=*
-# spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.bootstrap-servers=localhost:29092
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
+spring.kafka.consumer.auto-offset-reset=earliest
+
 
 
