--- a/searchservice-dev.properties
+++ b/searchservice-dev.properties
@@ -11,7 +11,8 @@ eureka.instance.instance-id= ${spring.application.name}:${instanceId:${random.va
 #kafka configurations
 spring.cloud.stream.kafka.binder.brokers=localhost:29092
 #DefinitionPathForBeanDistinction
-spring.cloud.function.definition=customerCreated;addressCreated;addressDeleted;addressUpdated;contactMediumCreated;contactMediumUpdated;contactMediumDeleted
+spring.cloud.function.definition=customerCreated 
+#;addressCreated;addressDeleted;addressUpdated;contactMediumCreated;contactMediumUpdated;contactMediumDeleted
 #CostumerAdd
 spring.cloud.stream.bindings.customerCreated-in-0.destination=customer-created-event
 spring.cloud.stream.bindings.customerCreated-in-0.group=search-service
@@ -39,6 +40,7 @@ spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.Str
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
 spring.kafka.consumer.auto-offset-reset=earliest
+
 
 
 
