--- a/customerservice-dev.properties
+++ b/customerservice-dev.properties
@@ -34,6 +34,6 @@ spring.cloud.stream.bindings.customerCreated-out-0.destination=customer-created-
 #spring.cloud.stream.bindings.contactMediumUpdated-out-0.destination=contactMedium-update-event
 #spring.cloud.stream.bindings.contactMediumDeleted-out-0.destination=contactMedium-deleted-event
 
-#spring.kafka.bootstrap-servers=localhost:29092
-#spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-#spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.bootstrap-servers=localhost:29092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
