--- a/searchservice-dev.properties
+++ b/searchservice-dev.properties
@@ -35,12 +35,11 @@ spring.cloud.stream.bindings.customerCreated-in-0.group=search-service
 #spring.cloud.stream.bindings.contactMediumDeleted-in-0.destination=contactMedium-deleted-event
 #spring.cloud.stream.bindings.contactMediumDeleted-in-0.group=contactMedium-deleted-service
 
-#spring.kafka.bootstrap-servers=localhost:29092
-#spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-#spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
-#spring.kafka.consumer.properties.spring.json.trusted.packages=*
-#spring.kafka.consumer.auto-offset-reset=earliest
-
+spring.kafka.bootstrap-servers=localhost:29092
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
+spring.kafka.consumer.auto-offset-reset=earliest
 
 
 
