--- a/authservice-dev.properties
+++ b/authservice-dev.properties
@@ -20,7 +20,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-#jwt.secret.key=CkPCC50RUQfXmRrwKs3+p+jkEnj9L+Hg+s1vYdIo0mU=
-#jwt.expiration=60000
+jwt.secret.key=CkPCC50RUQfXmRrwKs3+p+jkEnj9L+Hg+s1vYdIo0mU=
+jwt.expiration=60000
+
 
 
