--- a/searchservice-dev.properties
+++ b/searchservice-dev.properties
@@ -42,5 +42,9 @@ spring.kafka.consumer.properties.spring.json.trusted.packages=*
 spring.kafka.consumer.auto-offset-reset=earliest
 
 
+jwt.secret.key=CkPCC50RUQfXmRrwKs3+p+jkEnj9L+Hg+s1vYdIo0mU=
+jwt.expiration=6000000
+
+
 
 
