--- a/customerservice-dev.properties
+++ b/customerservice-dev.properties
@@ -37,3 +37,7 @@ spring.cloud.stream.bindings.customerCreated-out-0.destination=customer-created-
 spring.kafka.bootstrap-servers=localhost:29092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+
+
+jwt.secret.key=CkPCC50RUQfXmRrwKs3+p+jkEnj9L+Hg+s1vYdIo0mU=
+jwt.expiration=6000000
