--- a/customerservice-dev.properties
+++ b/customerservice-dev.properties
@@ -23,14 +23,17 @@ spring.jpa.properties.hibernate.format_sql=true
 
 #kafka configuration
 spring.cloud.stream.kafka.binder.brokers=localhost:29092
+
 #Customer
 spring.cloud.stream.bindings.customerCreated-out-0.destination=customer-created-event
+
 #Address
 #spring.cloud.stream.bindings.addressCreated-out-0.destination=address-created-event
 #spring.cloud.stream.bindings.addressDeleted-out-0.destination=address-deleted-event
 #spring.cloud.stream.bindings.addressUpdated-out-0.destination=address-update-event
+
 #ContactMedium
-#spring.cloud.stream.bindings.contactMediumCreated-out-0.destination=contactMedium-created-event
+spring.cloud.stream.bindings.contactMediumCreated-out-0.destination=contactMedium-created-event
 #spring.cloud.stream.bindings.contactMediumUpdated-out-0.destination=contactMedium-update-event
 #spring.cloud.stream.bindings.contactMediumDeleted-out-0.destination=contactMedium-deleted-event
 
