--- a/searchservice-dev.properties
+++ b/searchservice-dev.properties
@@ -10,27 +10,36 @@ eureka.instance.instance-id= ${spring.application.name}:${instanceId:${random.va
 
 #kafka configurations
 spring.cloud.stream.kafka.binder.brokers=localhost:29092
+
 #DefinitionPathForBeanDistinction
-spring.cloud.function.definition=customerCreated 
-#;addressCreated;addressDeleted;addressUpdated;contactMediumCreated;contactMediumUpdated;contactMediumDeleted
+spring.cloud.function.definition=customerCreated;contactMediumCreated
+
+#;addressCreated;addressDeleted;addressUpdated;contactMediumUpdated;contactMediumDeleted
+
 #CostumerAdd
 spring.cloud.stream.bindings.customerCreated-in-0.destination=customer-created-event
 spring.cloud.stream.bindings.customerCreated-in-0.group=search-service
+
 #AddressAdd
 #spring.cloud.stream.bindings.addressCreated-in-0.destination=address-created-event
 #spring.cloud.stream.bindings.addressCreated-in-0.group=address-search-service
+
 #AddressDelete
 #spring.cloud.stream.bindings.addressDeleted-in-0.destination=address-deleted-event
 #spring.cloud.stream.bindings.addressDeleted-in-0.group=address-deleted-service
+
 #AddressUpdate
 #spring.cloud.stream.bindings.addressUpdated-in-0.destination=address-update-event
 #spring.cloud.stream.bindings.addressUpdated-in-0.group=address-update-service
+
 #ContactMediumAdd
-#spring.cloud.stream.bindings.contactMediumCreated-in-0.destination=contactMedium-created-event
-#spring.cloud.stream.bindings.contactMediumCreated-in-0.group=contactMedium-search-service
+spring.cloud.stream.bindings.contactMediumCreated-in-0.destination=contactMedium-created-event
+spring.cloud.stream.bindings.contactMediumCreated-in-0.group=contactMedium-search-service
+
 #ContactMediumUpdate
 #spring.cloud.stream.bindings.contactMediumUpdated-in-0.destination=contactMedium-update-event
 #spring.cloud.stream.bindings.contactMediumUpdated-in-0.group=contactMedium-update-service
+
 #ContactMediumDelete
 #spring.cloud.stream.bindings.contactMediumDeleted-in-0.destination=contactMedium-deleted-event
 #spring.cloud.stream.bindings.contactMediumDeleted-in-0.group=contactMedium-deleted-service
@@ -44,8 +53,6 @@ spring.kafka.consumer.auto-offset-reset=earliest
 
 jwt.secret.key=CkPCC50RUQfXmRrwKs3+p+jkEnj9L+Hg+s1vYdIo0mU=
 jwt.expiration=6000000
-
-
 
 
 
