--- a/customerservice-dev.properties
+++ b/customerservice-dev.properties
@@ -28,7 +28,7 @@ spring.cloud.stream.kafka.binder.brokers=localhost:29092
 spring.cloud.stream.bindings.customerCreated-out-0.destination=customer-created-event
 
 #Address
-#spring.cloud.stream.bindings.addressCreated-out-0.destination=address-created-event
+spring.cloud.stream.bindings.addressCreated-out-0.destination=address-created-event
 #spring.cloud.stream.bindings.addressDeleted-out-0.destination=address-deleted-event
 #spring.cloud.stream.bindings.addressUpdated-out-0.destination=address-update-event
 
