--- a/searchservice-dev.properties
+++ b/searchservice-dev.properties
@@ -12,17 +12,17 @@ eureka.instance.instance-id= ${spring.application.name}:${instanceId:${random.va
 spring.cloud.stream.kafka.binder.brokers=localhost:29092
 
 #DefinitionPathForBeanDistinction
-spring.cloud.function.definition=customerCreated;contactMediumCreated
+spring.cloud.function.definition=customerCreated;contactMediumCreated;addressCreated
 
-#;addressCreated;addressDeleted;addressUpdated;contactMediumUpdated;contactMediumDeleted
+#;addressDeleted;addressUpdated;contactMediumUpdated;contactMediumDeleted
 
 #CostumerAdd
 spring.cloud.stream.bindings.customerCreated-in-0.destination=customer-created-event
 spring.cloud.stream.bindings.customerCreated-in-0.group=search-service
 
 #AddressAdd
-#spring.cloud.stream.bindings.addressCreated-in-0.destination=address-created-event
-#spring.cloud.stream.bindings.addressCreated-in-0.group=address-search-service
+spring.cloud.stream.bindings.addressCreated-in-0.destination=address-created-event
+spring.cloud.stream.bindings.addressCreated-in-0.group=address-search-service
 
 #AddressDelete
 #spring.cloud.stream.bindings.addressDeleted-in-0.destination=address-deleted-event
