--- a/customerservice-dev.properties
+++ b/customerservice-dev.properties
@@ -37,6 +37,10 @@ spring.cloud.stream.bindings.contactMediumCreated-out-0.destination=contactMediu
 #spring.cloud.stream.bindings.contactMediumUpdated-out-0.destination=contactMedium-update-event
 #spring.cloud.stream.bindings.contactMediumDeleted-out-0.destination=contactMedium-deleted-event
 
+#BillingAccount
+spring.cloud.stream.bindings.billingAccountCreated-out-0.destination=billingAccount-created-event
+
+
 spring.kafka.bootstrap-servers=localhost:29092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
