--- a/searchservice-dev.properties
+++ b/searchservice-dev.properties
@@ -12,7 +12,7 @@ eureka.instance.instance-id= ${spring.application.name}:${instanceId:${random.va
 spring.cloud.stream.kafka.binder.brokers=localhost:29092
 
 #DefinitionPathForBeanDistinction
-spring.cloud.function.definition=customerCreated;contactMediumCreated;addressCreated
+spring.cloud.function.definition=customerCreated;contactMediumCreated;addressCreated;billingAccountCreated
 
 #;addressDeleted;addressUpdated;contactMediumUpdated;contactMediumDeleted
 
@@ -43,6 +43,11 @@ spring.cloud.stream.bindings.contactMediumCreated-in-0.group=contactMedium-searc
 #ContactMediumDelete
 #spring.cloud.stream.bindings.contactMediumDeleted-in-0.destination=contactMedium-deleted-event
 #spring.cloud.stream.bindings.contactMediumDeleted-in-0.group=contactMedium-deleted-service
+
+#BillingAccount
+spring.cloud.stream.bindings.billingAccountCreated-in-0.destination=billingAccount-created-event
+spring.cloud.stream.bindings.billingAccountCreated-in-0.group=billingAccount-search-service
+
 
 spring.kafka.bootstrap-servers=localhost:29092
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
