--- a/customerservice-dev.properties
+++ b/customerservice-dev.properties
@@ -26,7 +26,7 @@ spring.cloud.stream.kafka.binder.brokers=localhost:29092
 
 #Customer
 spring.cloud.stream.bindings.customerCreated-out-0.destination=customer-created-event
-
+spring.cloud.stream.bindings.customerDeleted-out-0.destination=customer-deleted-event
 #Address
 spring.cloud.stream.bindings.addressCreated-out-0.destination=address-created-event
 #spring.cloud.stream.bindings.addressDeleted-out-0.destination=address-deleted-event
