--- a/searchservice-dev.properties
+++ b/searchservice-dev.properties
@@ -12,13 +12,17 @@ eureka.instance.instance-id= ${spring.application.name}:${instanceId:${random.va
 spring.cloud.stream.kafka.binder.brokers=localhost:29092
 
 #DefinitionPathForBeanDistinction
-spring.cloud.function.definition=customerCreated;contactMediumCreated;addressCreated;billingAccountCreated
+spring.cloud.function.definition=customerCreated;contactMediumCreated;addressCreated;billingAccountCreated;customerDeleted
 
 #;addressDeleted;addressUpdated;contactMediumUpdated;contactMediumDeleted
 
 #CostumerAdd
 spring.cloud.stream.bindings.customerCreated-in-0.destination=customer-created-event
 spring.cloud.stream.bindings.customerCreated-in-0.group=search-service
+
+#CustomerDelete
+spring.cloud.stream.bindings.customerDeleted-in-0.destination=customer-deleted-event
+spring.cloud.stream.bindings.customerDeleted-in-0.group=customer-deleted-service
 
 #AddressAdd
 spring.cloud.stream.bindings.addressCreated-in-0.destination=address-created-event
