--- a/searchservice-dev.properties
+++ b/searchservice-dev.properties
@@ -12,7 +12,7 @@ eureka.instance.instance-id= ${spring.application.name}:${instanceId:${random.va
 spring.cloud.stream.kafka.binder.brokers=localhost:29092
 
 #DefinitionPathForBeanDistinction
-spring.cloud.function.definition=customerCreated;contactMediumCreated;addressCreated;billingAccountCreated;customerDeleted
+spring.cloud.function.definition=customerCreated;contactMediumCreated;addressCreated;billingAccountCreated;customerDeleted;customerUpdated
 
 #;addressDeleted;addressUpdated;contactMediumUpdated;contactMediumDeleted
 
@@ -23,6 +23,10 @@ spring.cloud.stream.bindings.customerCreated-in-0.group=search-service
 #CustomerDelete
 spring.cloud.stream.bindings.customerDeleted-in-0.destination=customer-deleted-event
 spring.cloud.stream.bindings.customerDeleted-in-0.group=customer-deleted-service
+
+#CustomerUpdate
+spring.cloud.stream.bindings.customerUpdated-in-0.destination=customer-updated-event
+spring.cloud.stream.bindings.customerUpdated-in-0.group=customer-updated-service
 
 #AddressAdd
 spring.cloud.stream.bindings.addressCreated-in-0.destination=address-created-event
