--- a/customerservice-dev.properties
+++ b/customerservice-dev.properties
@@ -32,7 +32,7 @@ spring.cloud.stream.bindings.customerUpdated-out-0.destination=customer-updated-
 #Address
 spring.cloud.stream.bindings.addressCreated-out-0.destination=address-created-event
 #spring.cloud.stream.bindings.addressDeleted-out-0.destination=address-deleted-event
-#spring.cloud.stream.bindings.addressUpdated-out-0.destination=address-update-event
+spring.cloud.stream.bindings.addressUpdated-out-0.destination=address-update-event
 
 #ContactMedium
 spring.cloud.stream.bindings.contactMediumCreated-out-0.destination=contactMedium-created-event
