--- a/searchservice-dev.properties
+++ b/searchservice-dev.properties
@@ -12,9 +12,9 @@ eureka.instance.instance-id= ${spring.application.name}:${instanceId:${random.va
 spring.cloud.stream.kafka.binder.brokers=localhost:29092
 
 #DefinitionPathForBeanDistinction
-spring.cloud.function.definition=customerCreated;contactMediumCreated;addressCreated;billingAccountCreated;customerDeleted;customerUpdated
+spring.cloud.function.definition=customerCreated;contactMediumCreated;addressCreated;billingAccountCreated;customerDeleted;customerUpdated;addressUpdated
 
-#;addressDeleted;addressUpdated;contactMediumUpdated;contactMediumDeleted
+#;addressDeleted;contactMediumUpdated;contactMediumDeleted
 
 #CostumerAdd
 spring.cloud.stream.bindings.customerCreated-in-0.destination=customer-created-event
@@ -37,8 +37,8 @@ spring.cloud.stream.bindings.addressCreated-in-0.group=address-search-service
 #spring.cloud.stream.bindings.addressDeleted-in-0.group=address-deleted-service
 
 #AddressUpdate
-#spring.cloud.stream.bindings.addressUpdated-in-0.destination=address-update-event
-#spring.cloud.stream.bindings.addressUpdated-in-0.group=address-update-service
+spring.cloud.stream.bindings.addressUpdated-in-0.destination=address-update-event
+spring.cloud.stream.bindings.addressUpdated-in-0.group=address-update-service
 
 #ContactMediumAdd
 spring.cloud.stream.bindings.contactMediumCreated-in-0.destination=contactMedium-created-event
