--- a/searchservice-dev.properties
+++ b/searchservice-dev.properties
@@ -12,9 +12,9 @@ eureka.instance.instance-id= ${spring.application.name}:${instanceId:${random.va
 spring.cloud.stream.kafka.binder.brokers=localhost:29092
 
 #DefinitionPathForBeanDistinction
-spring.cloud.function.definition=customerCreated;contactMediumCreated;addressCreated;billingAccountCreated;customerDeleted;customerUpdated;addressUpdated
+spring.cloud.function.definition=customerCreated;contactMediumCreated;addressCreated;billingAccountCreated;customerDeleted;customerUpdated;addressUpdated;addressDeleted;contactMediumUpdated;contactMediumDeleted
 
-#;addressDeleted;contactMediumUpdated;contactMediumDeleted
+
 
 #CostumerAdd
 spring.cloud.stream.bindings.customerCreated-in-0.destination=customer-created-event
@@ -33,8 +33,8 @@ spring.cloud.stream.bindings.addressCreated-in-0.destination=address-created-eve
 spring.cloud.stream.bindings.addressCreated-in-0.group=address-search-service
 
 #AddressDelete
-#spring.cloud.stream.bindings.addressDeleted-in-0.destination=address-deleted-event
-#spring.cloud.stream.bindings.addressDeleted-in-0.group=address-deleted-service
+spring.cloud.stream.bindings.addressDeleted-in-0.destination=address-deleted-event
+spring.cloud.stream.bindings.addressDeleted-in-0.group=address-deleted-service
 
 #AddressUpdate
 spring.cloud.stream.bindings.addressUpdated-in-0.destination=address-update-event
@@ -45,12 +45,12 @@ spring.cloud.stream.bindings.contactMediumCreated-in-0.destination=contactMedium
 spring.cloud.stream.bindings.contactMediumCreated-in-0.group=contactMedium-search-service
 
 #ContactMediumUpdate
-#spring.cloud.stream.bindings.contactMediumUpdated-in-0.destination=contactMedium-update-event
-#spring.cloud.stream.bindings.contactMediumUpdated-in-0.group=contactMedium-update-service
+spring.cloud.stream.bindings.contactMediumUpdated-in-0.destination=contactMedium-update-event
+spring.cloud.stream.bindings.contactMediumUpdated-in-0.group=contactMedium-update-service
 
 #ContactMediumDelete
-#spring.cloud.stream.bindings.contactMediumDeleted-in-0.destination=contactMedium-deleted-event
-#spring.cloud.stream.bindings.contactMediumDeleted-in-0.group=contactMedium-deleted-service
+spring.cloud.stream.bindings.contactMediumDeleted-in-0.destination=contactMedium-deleted-event
+spring.cloud.stream.bindings.contactMediumDeleted-in-0.group=contactMedium-deleted-service
 
 #BillingAccount
 spring.cloud.stream.bindings.billingAccountCreated-in-0.destination=billingAccount-created-event
@@ -69,4 +69,4 @@ jwt.expiration=6000000
 
 
 
-
+ 
