--- a/customerservice-dev.properties
+++ b/customerservice-dev.properties
@@ -41,6 +41,7 @@ spring.cloud.stream.bindings.contactMediumDeleted-out-0.destination=contactMediu
 
 #BillingAccount
 spring.cloud.stream.bindings.billingAccountCreated-out-0.destination=billingAccount-created-event
+spring.cloud.stream.bindings.billingAccountDeleted-out-0.destination=billingAccount-deleted-event
 
 
 spring.kafka.bootstrap-servers=localhost:29092
