--- a/searchservice-dev.properties
+++ b/searchservice-dev.properties
@@ -56,6 +56,11 @@ spring.cloud.stream.bindings.contactMediumDeleted-in-0.group=contactMedium-delet
 spring.cloud.stream.bindings.billingAccountCreated-in-0.destination=billingAccount-created-event
 spring.cloud.stream.bindings.billingAccountCreated-in-0.group=billingAccount-search-service
 
+#BillingAccountDelete
+spring.cloud.stream.bindings.billingAccountDeleted-in-0.destination=billingAccount-deleted-event
+spring.cloud.stream.bindings.billingAccountDeleted-in-0.group=billingAccount-deleted-service
+
+
 
 spring.kafka.bootstrap-servers=localhost:29092
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
