--- a/searchservice-dev.properties
+++ b/searchservice-dev.properties
@@ -12,7 +12,7 @@ eureka.instance.instance-id= ${spring.application.name}:${instanceId:${random.va
 spring.cloud.stream.kafka.binder.brokers=localhost:29092
 
 #DefinitionPathForBeanDistinction
-spring.cloud.function.definition=customerCreated;contactMediumCreated;addressCreated;billingAccountCreated;customerDeleted;customerUpdated;addressUpdated;addressDeleted;contactMediumUpdated;contactMediumDeleted
+spring.cloud.function.definition=customerCreated;contactMediumCreated;addressCreated;billingAccountCreated;customerDeleted;customerUpdated;addressUpdated;addressDeleted;contactMediumUpdated;contactMediumDeleted;billingAccountDeleted
 
 
 
