--- a/searchservice-dev.properties
+++ b/searchservice-dev.properties
@@ -12,7 +12,7 @@ eureka.instance.instance-id= ${spring.application.name}:${instanceId:${random.va
 spring.cloud.stream.kafka.binder.brokers=localhost:29092
 
 #DefinitionPathForBeanDistinction
-spring.cloud.function.definition=customerCreated;contactMediumCreated;addressCreated;billingAccountCreated;customerDeleted;customerUpdated;addressUpdated;addressDeleted;contactMediumUpdated;contactMediumDeleted;billingAccountDeleted
+spring.cloud.function.definition=customerCreated;contactMediumCreated;addressCreated;billingAccountCreated;customerDeleted;customerUpdated;addressUpdated;addressDeleted;contactMediumUpdated;contactMediumDeleted;billingAccountDeleted;billingAccountUpdated
 
 
 
@@ -59,6 +59,10 @@ spring.cloud.stream.bindings.billingAccountCreated-in-0.group=billingAccount-sea
 #BillingAccountDelete
 spring.cloud.stream.bindings.billingAccountDeleted-in-0.destination=billingAccount-deleted-event
 spring.cloud.stream.bindings.billingAccountDeleted-in-0.group=billingAccount-deleted-service
+
+#BillingAccountUpdate
+spring.cloud.stream.bindings.billingAccountUpdated-in-0.destination=billingAccount-update-event
+spring.cloud.stream.bindings.billingAccountUpdated-in-0.group=billingAccount-update-service
 
 
 
