--- a/customerservice-dev.properties
+++ b/customerservice-dev.properties
@@ -42,7 +42,7 @@ spring.cloud.stream.bindings.contactMediumDeleted-out-0.destination=contactMediu
 #BillingAccount
 spring.cloud.stream.bindings.billingAccountCreated-out-0.destination=billingAccount-created-event
 spring.cloud.stream.bindings.billingAccountDeleted-out-0.destination=billingAccount-deleted-event
-
+spring.cloud.stream.bindings.billingAccountUpdated-out-0.destination=billingAccount-update-event
 
 spring.kafka.bootstrap-servers=localhost:29092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
