--- a/salesservice-dev.properties
+++ b/salesservice-dev.properties
@@ -1,4 +1,4 @@
-spring.application.name=basketservice
+spring.application.name=salesservice
 server.port=0
 #Eureka Configuration
 
@@ -9,8 +9,9 @@ eureka.client.service-url.defaultZone= http://localhost:8090/eureka
 eureka.instance.prefer-ip-address= true
 eureka.instance.instance-id= ${spring.application.name}:${instanceId:${random.value}}
 
-spring.data.redis.host=localhost
-spring.data.redis.port=6379
+spring.data.mongodb.database=salesservicedb
+spring.data.mongodb.port=27017
+spring.data.mongodb.uri=mongodb://localhost:27017
 
 jwt.secret.key=CkPCC50RUQfXmRrwKs3+p+jkEnj9L+Hg+s1vYdIo0mU=
 jwt.expiration=6000000
